chandeliers-lus/tests/compile_fail/ui/tc/strlit.rs
//! Bad literal.
chandeliers_lus::decl! {
    const S: int = "foobar";
}

fn main() {}
